@@ -307,7 +307,7 @@
                                 </goals>
                                 <configuration>
                                     <executable>java</executable>
-                                    <commandlineArgs>-Xmx512M -Xms128M -XX:ReservedCodeCacheSize=128M -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+UseStringDeduplication -cp "${project.build.directory}${file.separator}${project.build.finalName}.jar" com.group_finity.mascot.Main</commandlineArgs>
+                                    <commandlineArgs>--enable-native-access=ALL-UNNAMED -Xmx512M -Xms128M -XX:ReservedCodeCacheSize=128M -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+UseStringDeduplication -cp "${project.build.directory}${file.separator}${project.build.finalName}.jar" com.group_finity.mascot.Main</commandlineArgs>
                                     <workingDirectory>${project.basedir}</workingDirectory>
                                 </configuration>
                             </execution>
